# url_shortener

./: Cargo.toml
client/: package-lock.json  package.json
client/src/: App.tsx  UrlShortener.tsx
src/: error.rs  handlers.rs  main.rs  router.rs  service.rs
src/store/: memory.rs  mod.rs  mongo.rs
src/utils/: slug.rs
