[package]
name = "rust_url_shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.4"
bson = "2.14.0"
chrono = { version = "0.4.41", features = ["serde"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
mongodb = "3.2.3"
nanoid = "0.4.0"
once_cell = "1.21.3"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
